--- a/ui/modules/vehicleselect/vehicleselect.html
+++ b/ui/modules/vehicleselect/vehicleselect.html
@@ -1,15 +1,6 @@
 <link rel="stylesheet" type="text/css" href="/ui/modules/vehicleselect/vehicleselect.css" />
 
-<md-content bng-nav-root flex style="height: 100%" layout="column" class="VehicleSelect">
-  <md-toolbar >
-    <div class="md-toolbar-tools">
-      <div style="margin: 8px">Vehicles</div>
-
-      <!-- Align elements to the right -->
-      <span flex></span>
-      </div>
-  </md-toolbar>
-
+<md-content flex style="height: 100%" layout="column" class="VehicleSelect">
   <div style="position: relative" flex>
     <div class="container"
       bng-v-list bng-v-repeat="model in vehicles.shownData">
@@ -42,7 +33,7 @@
 <md-content flex="35" layout="column" style="max-width: 450px; height: 100%; width: 300px; box-sizing: border-box" class="transparency" bng-blur="true">
   <md-toolbar class="md-primary md-hue-1">
     <div class="md-toolbar-tools">
-      <span flex>{{ ::'ui.common.filters' | translate }}</span>
+      <span flex>{{:: 'ui.common.filters' | translate}}</span>
     </div>
   </md-toolbar>
   <div style="padding: 10px;">
@@ -51,15 +42,15 @@
 
       <md-button style="min-width: fit-content; font-size: 70%;" class="md-raised md-primary" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.saveDefault()" bng-sound-class="bng_button_main_ui_default">
         <md-icon class="material-icons"  style="color:white;;">sd_storage</md-icon>
-        {{ ::'ui.options.gameplay.defaultToCurrentVehicle' | translate }}
+        {{:: 'ui.options.gameplay.defaultToCurrentVehicle' | translate}}
       </md-button>
       <md-button style="min-width: fit-content; font-size: 70%;" class="md-raised md-primary" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.loadDefault()" bng-sound-class="bng_button_main_ui_default">
         <md-icon class="material-icons"  style="color:white;;">folder_open</md-icon>
-        {{ ::'ui.options.gameplay.loadDefaultVehicle' | translate }}
+        {{:: 'ui.options.gameplay.loadDefaultVehicle' | translate}}
       </md-button>
       <md-button style="min-width: fit-content; font-size: 70%;" class="md-raised md-primary" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.cloneCurrentVehicle()" bng-sound-class="bng_button_main_ui_default">
         <md-icon class="material-icons"  style="color:white;;">content_copy</md-icon>
-        {{ ::'ui.options.gameplay.cloneCurrentVehicle' | translate }}
+        {{:: 'ui.options.gameplay.cloneCurrentVehicle' | translate}}
       </md-button>
       <md-button style="min-width: fit-content; font-size: 70%;" class="md-raised md-accent" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.resetAll()" bng-sound-class="bng_button_main_ui_default">
         <md-icon class="material-icons"  style="color:white;;">settings_backup_restore</md-icon>
@@ -67,20 +58,20 @@
       </md-button>
       <md-button style="min-width: fit-content; font-size: 70%;" class="md-raised md-warn" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.removeCurrentVehicle()" bng-sound-class="bng_button_main_ui_default">
         <md-icon class="material-icons"  style="color:white;;">delete</md-icon>
-        {{ ::'ui.options.gameplay.removeCurrentVehicle' | translate }}
+        {{:: 'ui.options.gameplay.removeCurrentVehicle' | translate}}
       </md-button>
       <md-button style="min-width: fit-content; font-size: 70%;" class="md-raised md-warn" ng-if="!vehicles.mode.hide.removeBtns && !vehicles.isMPSession" ng-click="vehicles.removeAllExceptCurrentVehicle()" bng-sound-class="bng_button_main_ui_default">
         <md-icon class="material-icons"  style="color:white;;">delete_sweep</md-icon>
-        {{ ::'ui.options.gameplay.removeOtherVehicles' | translate }}
+        {{:: 'ui.options.gameplay.removeOtherVehicles' | translate}}
       </md-button>
 
     </div>
 
 
-  <div layout="row" layout-align="center center" style="z-index: 1;">
+  <div layout="row" layout-align="center center" style="z-index: var(--zorder_vehicleselect_search);">
     <md-input-container flex bng-all-clicks double="vehicles.showConfigurations ? (vehicles.showConfigurations = false) : (vehicles.showConfigurations = true); vehicles.switchList()" bng-sound-class="bng_button_main_ui_input">
-      <label ng-if="!vehicles.query"><md-icon class="material-icons">search</md-icon>{{ ::'ui.common.search' | translate }}</label>
-      <label ng-if="vehicles.query"><md-icon class="material-icons">search</md-icon>{{ ::'ui.common.vehSearch' | translate }}</label>
+      <label ng-if="!vehicles.query"><md-icon class="material-icons">search</md-icon>{{:: 'ui.common.search' | translate}}</label>
+      <label ng-if="vehicles.query"><md-icon class="material-icons">search</md-icon>{{:: 'ui.common.vehSearch' | translate}}</label>
       <input ng-model="vehicles.query" ng-model-options="{debounce: 400}" ng-change="vehicles.applyFilters(); vehicles.switchList()" aria-label="Search">
     </md-input-container>
     <md-button md-no-ink class="md-icon-button md-warn" ng-click="vehicles.query = ''; vehicles.showConfigurations = false; vehicles.applyFilters(); vehicles.switchList()" ng-disabled="!vehicles.query" bng-sound-class="bng_button_main_ui_default">
@@ -88,14 +79,14 @@
     </md-button>
   </div>
 
-  <div layout="row" layout-align="center center" style="z-index: 1; margin-top: -10px; margin-bottom: 10px;">
-    <md-checkbox md-no-ink ng-model="vehicles.showConfigurations" ng-change="vehicles.switchList()" bng-sound-class="bng_button_main_ui_checkbox">{{"ui.options.gameplay.showConfigurations" | translate}}</md-checkbox>
+  <div layout="row" layout-align="center center" style="z-index: var(--zorder_vehicleselect_showconfigs); margin-top: -10px; margin-bottom: 10px;">
+    <md-checkbox md-no-ink ng-model="vehicles.showConfigurations" ng-change="vehicles.switchList()" bng-sound-class="bng_button_main_ui_checkbox">{{:: "ui.options.gameplay.showConfigurations" | translate}}</md-checkbox>
   </div>
 
     <div style="border: 1px solid rgba(0,0,0,0.10); padding: 6px">
     <bng-accordion multiple style="overflow-y: auto; display: list-item;">
       <bng-accordion-pane ng-repeat="key in vehicles.filterKeyList" ng-if="vehicles.showData(key);" bng-sound-class="bng_button_main_ui_arrowsupdown" default-open="key == 'Drivetrain' || key == 'Transmission'">
-        <bng-pane-header style="padding: 10px">{{ :: key | translate}}</bng-pane-header>
+        <bng-pane-header style="padding: 10px">{{key | translate}}</bng-pane-header>
 
         <bng-pane-body style="margin-left:10px; column-count: 2" ng-if=":: !vehicles.isRange(key);">
           <md-checkbox md-no-ink ng-repeat="(option, _) in ::vehicles.data.filters[key] track by $index" ng-model="vehicles.data.filters[key][option]" ng-change="vehicles.applyFilters()" bng-sound-class="bng_button_main_ui_checkbox">{{ :: option }}</md-checkbox>
