feature: add support for drag-race mini-game on maps that have dragstrip (gridmapv2, west-coast-usa, maybe others). Add custom server messages ui layer and api.
todo: test multiplayer drag-race

--- a/ui/entrypoints/main/index.html
+++ b/ui/entrypoints/main/index.html
@@ -103,7 +103,14 @@
   <script src="/ui/modules/busRoute/busRoute.js"></script>
   <script src="/ui/modules/iconView/icons.js"></script>
     <!-- --------------------------------- BEAMMP --------------------------------- -->
-  <script src="/ui/modules/multiplayer/multiplayer.js"></script> 
+  <script src="/ui/modules/multiplayer/multiplayer.js"></script>
+  <script src="/ui/modules/multiplayer/multiplayerMissions/multiplayer_missions.js"></script>
+  <script src="/ui/modules/multiplayer/multiplayerMissions/dragRaceDialog/sp/dragrace_dialog.js"></script>
+  <script src="/ui/modules/multiplayer/multiplayerMissions/dragRaceDialog/mp/dragrace_dialog.js"></script>
+  <script src="/ui/modules/multiplayer/multiplayerMissions/dragRaceUiOverlay/dragrace_ui.js"></script>
+  <link type="text/css" rel="stylesheet" href="/ui/modules/multiplayer/multiplayerMissions/multiplayer_missions.css">
+  <link type="text/css" rel="stylesheet" href="/ui/modules/multiplayer/multiplayerMissions/dragRaceDialog/dragrace_dialog.css">
+
 
   <script src="/ui/modules/fadeScreen/fadeScreen.js"></script>
 
@@ -179,6 +186,11 @@
   <mission-popups>
     <mission-info></mission-info>
   </mission-popups>
+
+  <mp-mission-popups>
+    <mp-mission-info></mp-mission-info>
+    <mp-mission-ui></mp-mission-ui>
+  </mp-mission-popups>
 
   <game-context-mini-info></game-context-mini-info>
 
