--- a/ui/entrypoints/main_0.24/index.html
+++ b/ui/entrypoints/main_0.24/index.html
@@ -50,7 +50,7 @@
   <link type="text/css" rel="stylesheet" href="/ui/lib/ext/chartist.min.css">
 
   <!-- BeamNG UI -->
-  <script src="/ui/entrypoints/main/main.js"></script>
+  <script src="/ui/entrypoints/main_0.24/main.js"></script>
 
   <script src="/ui/lib/int/beamng-core.js"></script>
   <script src="/ui/lib/int/utilities.js"></script>
