updates to game files

--- a/ui/modules/options/options.html
+++ b/ui/modules/options/options.html
@@ -98,7 +98,7 @@
         ng-class="{'md-primary md-raised': false }"
         ui-sref="credits" style="text-align:left;" bng-sound-class="bng_button_default">
         <md-icon class="material-icons">people</md-icon>
-        {{ 'ui.mainmenu.credits' | translate }}
+        {{:: 'ui.mainmenu.credits' | translate}}
       </md-button>
 
       <md-button
